# tp-electiva-ai-advanced-topics

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  hotel_restaurant_erd.puml  init_db.py  list_models.py  main.py  manage.py  pyproject.toml  requirements.txt
DB/: hotel.db  schema.sql  seed.sql
app_tp/: asgi.py  settings.py  urls.py  wsgi.py
hotel/: models.py
hotel/fixtures/: seed.json
hotel/migrations/: 0001_initial.py
nl_sql_agent/: apps.py  chains.py  examples.py  formatters.py  guardrails.py  llm.py  safety.py  schemas.py  sql_runner.py  urls.py  views.py
nl_sql_agent/templates/nl_sql_agent/: ask.html
