[project]
name = "tp-electiva-ai-advanced-topics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.0.10",
    "load-dotenv>=0.1.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
